# btInfinite

./: .gitignore  CMakeLists.txt
include/: btInfBroadphase.h  btInfCollisionDispatcher.h  btInfRigidBody.h  btInfTypes.h
include/btInf/: Broadphase.h  CollisionDispatcher.h  RigidBody.h  Types.h
src/: Broadphase.cpp  CollisionDispatcher.cpp  RigidBody.cpp  btInfBroadphase.cpp  btInfCollisionDispatcher.cpp  btInfRigidBody.cpp
tests/: main.cpp
