cmake_minimum_required(VERSION 3.9.1)
# set(CMAKE_CXX_COMPILER "/usr/bin/clang++")

project(btInfinite CXX)
set(CMAKE_BUILD_TYPE "Debug")
set(PROJECT_ROOT ${PROJECT_SOURCE_DIR})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_ROOT}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_ROOT}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_ROOT}/bin)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
enable_testing()
include_directories(include)
link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

set(USE_DOUBLE_PRECISION ON CACHE BOOL "" FORCE)
set(BUILD_EXTRAS OFF CACHE BOOL "" FORCE)
set(USE_GRAPHICAL_BENCHMARK OFF CACHE BOOL "" FORCE)
set(LIBRARY_OUTPUT_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} CACHE PATH "" FORCE)
SET(BUILD_BULLET2_DEMOS OFF CACHE BOOL "" FORCE)
SET(BUILD_BULLET3 OFF CACHE BOOL "" FORCE)
SET(BUILD_CLSOCKET OFF CACHE BOOL "" FORCE)
SET(BUILD_CPU_DEMOS OFF CACHE BOOL "" FORCE)
SET(BUILD_DEMOS OFF CACHE BOOL "" FORCE)
SET(BUILD_ENET OFF CACHE BOOL "" FORCE)
SET(BUILD_OPENGL3_DEMOS OFF CACHE BOOL "" FORCE)
SET(BUILD_UNIT_TESTS OFF CACHE BOOL "" FORCE)
SET(USE_GLUT OFF CACHE BOOL "" FORCE)
SET(OpenGL_GL_PREFERENCE "GLVND")
include_directories(SYSTEM vendor/bullet3/src)
add_subdirectory(vendor/bullet3)

include_directories(include)
file(GLOB_RECURSE CPPS "${PROJECT_ROOT}/src/*.cpp")

add_executable(tests tests/main.cpp ${CPPS})
add_definitions(
	-std=c++17 -DCATCH_CONFIG_CONSOLE_WIDTH=200
	-Wfatal-errors -Wall -Wextra -Wconversion -Wsign-conversion -g3
	-DBT_USE_DOUBLE_PRECISION
)
TARGET_LINK_LIBRARIES(
	tests
	BulletDynamics BulletCollision LinearMath
)
#add_test(
#	NAME tests
#	WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
#	COMMAND tests
#)

